p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2

spec:
  replicas: 3

  selector:
    matchLabels:
      app: app2

  template:
    metadata:
      labels:
        app: app2

    spec:
      containers:
      - name: app2
        image: hashicorp/http-echo
        args:
          - "-text=app2"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app2

spec:
  selector:
    app: app2

  ports:
  - port: 80
    targetPort: 5678
